[package]
name = "gamebox-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
ddsfile = "0.5.2"
gamebox = { git = "https://github.com/jussyDr/gamebox" }
wgpu = "0.20.0"

[dev-dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
glam = "0.27.0"
winit = "0.30.0"
